fix spacing issues

--- a/src/index.css
+++ b/src/index.css
@@ -38,7 +38,7 @@ body {
 .instructions {
   font-family: "Inter", sans-serif;
   font-weight: 400;
-  margin-top: 0;
+  /* margin-top: 0; */
   text-align: center;
 }
 .dice-container {
@@ -73,6 +73,7 @@ body {
   font-size: 1.2rem;
   font-family: "Karla", sans-serif;
   cursor: pointer;
+  margin-bottom: 0.5em;
 }
 
 .roll-dice:focus {
@@ -86,4 +87,8 @@ body {
 .reset-button{
   font-size: 0.8rem;
 
+}
+
+.count-rolls{
+  margin-bottom: 0.5em;
 }
